[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "HTTP reverse proxy & load balancer"
repository = "https://github.com/antoniosarosi/rxh"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.8"
serde = "1.0.136"
serde_derive = "1.0.136"
